--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/validator": "^13.11.3",
     "@vercel/kv": "^0.2.3",
     "autoprefixer": "10.4.15",
     "next": "13.4.19",
@@ -21,6 +22,7 @@
     "react-qr-code": "^2.0.12",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "validator": "^13.11.0",
     "zustand": "^4.4.1"
   }
 }
